Move info btn to right of header; title needs to be fixed, now off-center

--- a/client/public/css/main.css
+++ b/client/public/css/main.css
@@ -37,19 +37,19 @@ body {
 }
 
 .app-header-content {
+  width: 100%;
   max-width: 400px;
   display: flex;
   flex-direction: row;
   justify-content: center;
 }
 
-.app-header-content i {
-  display: flex;
-  align-self: flex-end;
-}
-
 .app-title {
   margin: 0;
+}
+
+.info-btn i {
+  display: inline-block;
 }
 
 .login-page {
