--- a/client/public/css/modal.css
+++ b/client/public/css/modal.css
@@ -29,7 +29,7 @@
 }
 
 .modal-got-it {
-  align-self: center;
+  
 }
 
 /* Add Animation */
